argocd/base/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
spec:
  type: ClusterIP
  selector:
    app: jellyseerr
  ports:
    - port: 5055
      targetPort: 5055
