argocd/base/jellyseerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: jellyseerr
          port: 5055
  tls: {}
